--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -12,12 +12,11 @@
     tools:showIn="@layout/activity_main">
 
     <Button
+        android:text="Activity 2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Activity 2"
-
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="80dp" />
-
+        android:layout_marginBottom="69dp"
+        android:id="@+id/bplay" />
 </RelativeLayout>
