--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -19,4 +19,15 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="69dp"
         android:id="@+id/bplay" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginLeft="29dp"
+        android:layout_marginStart="29dp"
+        android:layout_marginTop="31dp"
+        android:id="@+id/tv1" />
 </RelativeLayout>
